workloads/emojivoto/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team2
  annotations:
    linkerd.io/inject: enabled
  labels:
    istio-injection: disabled
    appmesh.k8s.aws/sidecarInjectorWebhook: disabled
